Fix incrementBtn/substractBtn z-index

--- a/CSS/order.css
+++ b/CSS/order.css
@@ -193,7 +193,6 @@
   0px 3px 4.2px rgba(0, 0, 0, 0.065),
   0px 10px 14px rgba(0, 0, 0, 0.1)
 ;
-
 }
 .cart-content img {
     width: 110px;
@@ -228,20 +227,36 @@
 }
 .incrementBtn svg {
     transform: rotate(-90deg);
+    z-index: -1;
+    position: relative;
 }
 .substractBtn svg {
     transform: rotate(90deg) translateX(2px);
+    z-index: -1;
+    position: relative;
 }
 .amount-section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* position: relative; */
+    /* height: 65px; */
 }
 .clear-cart:hover {
     border-color: var(--yellow);
     background: var(--whtie);
     color: var(--black);
+}
+.remove-item,
+.incrementBtn,
+.substractBtn {
+    cursor: pointer;
+}
+.incrementBtn,
+.substractBtn {
+    position: relative;
+    z-index: 2;
 }
 /* ============ */
 /* Order-pg Header */
